2009-08-24  Per Bothner  <per@bothner.com>

	* CompileArith.java: New class, provides CanInline and Inlineable
	support for ArithOp - i.e. AddOp and MultiplyOp, so far.
	* Makefile.am: Update accordingly.
	* ArithOp.java: Move code to CompileArith.
	No longer inplement CanInline and Inlineable.
	* DivideOp.java: Update as needed.
	* MultiplyOp.java (inline, primitiveOpcode): Moved to CompileArith.
	* AddOp.java (inline, pairwise, primitiveOpcode, primInline): Likewise.

2009-08-23  Per Bothner  <per@bothner.com>

	* CompileMisc.java: New file: Implements Inlineable and CanInline
	for Convert and ConstantFunction0 - so far,
	* Makefile.am: Update accordingly.
	* Convert.java: Now longer implements CanInline or Inlineable.
	* ConstantFunction0.java: Now longer implements CanInline

	* Convert.java (makeCoercion*2): Moved to Compilation.
	(setCoercedReturnValue): Moved to LambdaExp.
	* CompilationHelpers.java: Update accordingly.
	* CompileNamedPart.java: Likewise.

2009-08-15  Per Bothner  <per@bothner.com>

	* GetNamedInstancePart.java: Move inline/expression support
	to CompileNamedPart.
	* CompileNamedPart.java (makeGetNamedInstancePartExp,
	inlineGetNamedInstancePart, inlineSetNamedInstancePart): New methods.

	* ArithOp.java (compile): Use implementation-type.
	This fixes Savannah bug #27257 "non-int dim. spec. in emitNewArray".

2009-08-13  Per Bothner  <per@bothner.com>

	* CompileNamedPart.java: New class - compilation/optimization-related
	methods for GetNamedPart and SetNamedPart.
	* Makefile.am: Update accordingly.
	* GetNamedPart.java: Keep only runtime-specific parts.
	* SetNamedPart.java: Likewise.

2009-08-12  Per Bothner  <per@bothner.com>

	* CompilationHelpers.java: New class.
	Used for inlining specific procedures.
	* Makefile.am: Update accordingly.
	* ApplyToArgs.java: No longer implements CanInline.
	(inline):  Replaced by CompilationHelpers.inlineApplyToArgs.
	* Setter.java: No longer implements CanInline.